// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`show page can mount 1`] = `
<div class="ShowPage">
	<div class="container">
		<!---->
	</div>
	<sharpcommandformmodal-stub></sharpcommandformmodal-stub>
	<sharpcommandviewpanel-stub></sharpcommandviewpanel-stub>
</div>
`;

exports[`show page can mount with fields 1`] = `
<div class="ShowPage">
	<div class="container">
		<sharpactionbarshow-stub formurl="formUrl"></sharpactionbarshow-stub>
		<h2 class="ShowPage__section-title mb-2">Section title</h2>
		<div class="ShowPage__section mb-4">
			<div rows="[object Object]" class="MOCKED_SharpGrid">
				<div class="MOCKED_SharpGrid ShowPage__fields-grid">
					<sharpshowfield-stub options="[object Object]" value="[object Object]"></sharpshowfield-stub>
				</div>
			</div>
		</div>
	</div>
	<sharpcommandformmodal-stub></sharpcommandformmodal-stub>
	<sharpcommandviewpanel-stub></sharpcommandviewpanel-stub>
</div>
`;

exports[`show page can mount with no container section 1`] = `
<div class="ShowPage">
	<div class="container">
		<sharpactionbarshow-stub formurl="formUrl"></sharpactionbarshow-stub>
		<h2 class="ShowPage__section-title mb-2">Section title</h2>
		<div class="ShowPage__section mb-4 ShowPage__section--no-container">
			<sharpgrid-stub rows="[object Object]"></sharpgrid-stub>
		</div>
	</div>
	<sharpcommandformmodal-stub></sharpcommandformmodal-stub>
	<sharpcommandviewpanel-stub></sharpcommandviewpanel-stub>
</div>
`;

exports[`show page can mount with unknown field 1`] = `
<div class="ShowPage">
	<div class="container">
		<sharpactionbarshow-stub formurl="formUrl"></sharpactionbarshow-stub>
		<h2 class="ShowPage__section-title mb-2">Section title</h2>
		<div class="ShowPage__section mb-4">
			<div rows="[object Object]" class="MOCKED_SharpGrid">
				<div class="MOCKED_SharpGrid ShowPage__fields-grid">
					<sharpshowunknownfield-stub name="name"></sharpshowunknownfield-stub>
				</div>
			</div>
		</div>
	</div>
	<sharpcommandformmodal-stub></sharpcommandformmodal-stub>
	<sharpcommandviewpanel-stub></sharpcommandviewpanel-stub>
</div>
`;
